test/negative/parse_unclosed_paren.mut
# Negative: missing closing parenthesis in expression
x: i64 = (10 + 20
